--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=postgresql://postgres:Reek@123@localhost:5432/jee_cbt
+DATABASE_URL=postgresql://exam_simulator_db_user:cnBbyPdvPCitdotZNHYCP1lp5V7MXa37@dpg-d5ehcbpr0fns73d6gd4g-a.singapore-postgres.render.com/exam_simulator_db?sslmode=require
 PORT=3000
 NODE_ENV=development
 
