--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@radix-ui/react-toggle": "^1.1.3",
     "@radix-ui/react-toggle-group": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.2.0",
+    "@sparticuz/chromium": "^143.0.4",
     "@tanstack/react-query": "^5.60.5",
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
@@ -65,7 +66,7 @@
     "passport-local": "^1.0.0",
     "pdfkit": "^0.17.2",
     "pg": "^8.16.3",
-    "puppeteer": "^24.34.0",
+    "puppeteer-core": "^24.34.0",
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
